// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout contentMinHeight 1`] = `
<div class="listview" style="height: 200px; min-height: inherit;">
  <!---->
  <div class="listview__main">
    <div class="list-view__filterbar list-view__filterbar--fold">
      <form class="el-form el-form--inline">
        <!---->
        <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
          <div class="filterbar__submit-btn" style="transform: translateX(0px);">
            <div class="el-form-item el-form-item--small">
              <!---->
              <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
                  <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
                  <!---->
                  <!----><span>
            重置
          </span></button>
                <!---->
              </div>
            </div>
          </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
            <!----><i class="el-icon-caret-bottom"></i>
            <!----></button>
        </div>
        <!---->
      </form>
    </div>
    <div>
      <div class="listview__content" style="height: 500px;">
        <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--small" style="width: 100%; height: 500px;">
          <div class="hidden-columns">
            <!---->
            <div></div>
          </div>
          <div class="el-table__header-wrapper">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 50px;">
              <colgroup>
                <col name="el-table_2_column_2" width="50">
              </colgroup>
              <thead class="">
                <tr class="">
                  <th colspan="1" rowspan="1" class="el-table_2_column_2  is-center el-table-column--selection  is-leaf">
                    <div class="cell"><label role="checkbox" aria-disabled="true" class="el-checkbox is-disabled"><span aria-checked="mixed" class="el-checkbox__input is-disabled"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="true" disabled="disabled" class="el-checkbox__original" value=""></span>
                        <!----></label></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class="el-table__body-wrapper is-scrolling-left">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 50px;">
              <colgroup>
                <col name="el-table_2_column_2" width="50">
              </colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div class="el-table__empty-block" style="width: 50px;"><span class="el-table__empty-text">暂无数据</span></div>
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div class="el-table__column-resize-proxy" style="display: none;"></div>
        </div>
      </div>
      <div class="listview__page">
        <div class="el-pagination is-background"><span class="el-pagination__total">共 0 条</span><span class="el-pagination__sizes"><div class="el-select el-select--mini"><!----><div class="el-input el-input--mini el-input--suffix"><!----><input type="text" readonly="readonly" autocomplete="off" placeholder="请选择" class="el-input__inner"><!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-select__caret el-input__icon el-icon-arrow-up"></i><!----><!----></span>
          <!----></span>
          <!---->
        </div>
        <div class="el-select-dropdown el-popper" style="display: none;">
          <div class="el-scrollbar" style="">
            <div class="el-select-dropdown__wrap el-scrollbar__wrap el-scrollbar__wrap--hidden-default">
              <ul class="el-scrollbar__view el-select-dropdown__list">
                <!---->
                <li class="el-select-dropdown__item selected"><span>20条/页</span></li>
                <li class="el-select-dropdown__item"><span>50条/页</span></li>
                <li class="el-select-dropdown__item"><span>100条/页</span></li>
              </ul>
            </div>
            <div class="el-scrollbar__bar is-horizontal">
              <div class="el-scrollbar__thumb" style="transform: translateX(0%); -webkit-transform: translateX(0%);"></div>
            </div>
            <div class="el-scrollbar__bar is-vertical">
              <div class="el-scrollbar__thumb" style="transform: translateY(0%); -webkit-transform: translateY(0%);"></div>
            </div>
          </div>
          <!---->
        </div>
      </div></span><button type="button" disabled="disabled" class="btn-prev"><i class="el-icon el-icon-arrow-left"></i></button>
      <ul class="el-pager">
        <!---->
        <!---->
        <!---->
        <!---->
      </ul><button type="button" disabled="disabled" class="btn-next"><i class="el-icon el-icon-arrow-right"></i></button><span class="el-pagination__jump">前往<div class="el-input el-pagination__editor is-in-pagination"><!----><input type="number" autocomplete="off" min="1" max="0" class="el-input__inner"><!----><!----><!----></div>页</span>
    </div>
  </div>
</div>
</div>
</div>
`;

exports[`layout listview header empty 1`] = `undefined`;

exports[`layout listview header nav 1`] = `
<div class="listview__header">
  <!---->
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner">
      home
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span></div>
</div>
`;

exports[`layout listview header title & nav 1`] = `
<div class="listview__header">
  <h1 class="listview__title">
    headerTitle
  </h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner is-link">
      home
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span></div>
</div>
`;

exports[`layout listview header title 1`] = `
<div class="listview__header">
  <h1 class="listview__title">
    headerTitle
  </h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"></div>
</div>
`;

exports[`layout pager 1`] = `
<div class="listview">
  <!---->
  <div class="listview__main">
    <div class="list-view__filterbar list-view__filterbar--fold">
      <form class="el-form el-form--inline">
        <!---->
        <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
          <div class="filterbar__submit-btn" style="transform: translateX(0px);">
            <div class="el-form-item el-form-item--small">
              <!---->
              <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
                  <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
                  <!---->
                  <!----><span>
            重置
          </span></button>
                <!---->
              </div>
            </div>
          </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
            <!----><i class="el-icon-caret-bottom"></i>
            <!----></button>
        </div>
        <!---->
      </form>
    </div>
    <div>
      <div class="listview__content">
        <div class="el-table el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--small" style="width: 100%;">
          <div class="hidden-columns">
            <!---->
            <div></div>
          </div>
          <div class="el-table__header-wrapper">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__header">
              <colgroup></colgroup>
              <thead class="">
                <tr class=""></tr>
              </thead>
            </table>
          </div>
          <div class="el-table__body-wrapper is-scrolling-none">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__body">
              <colgroup></colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div class="el-table__empty-block"><span class="el-table__empty-text">暂无数据</span></div>
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div class="el-table__column-resize-proxy" style="display: none;"></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`layout specify height 1`] = `
<div class="listview">
  <!---->
  <div class="listview__main">
    <div class="list-view__filterbar list-view__filterbar--fold">
      <form class="el-form el-form--inline">
        <!---->
        <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
          <div class="filterbar__submit-btn" style="transform: translateX(0px);">
            <div class="el-form-item el-form-item--small">
              <!---->
              <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
                  <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
                  <!---->
                  <!----><span>
            重置
          </span></button>
                <!---->
              </div>
            </div>
          </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
            <!----><i class="el-icon-caret-bottom"></i>
            <!----></button>
        </div>
        <!---->
      </form>
    </div>
    <div>
      <div class="listview__content">
        <div class="el-table el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--small" style="width: 100%;">
          <div class="hidden-columns">
            <!---->
            <div></div>
          </div>
          <div class="el-table__header-wrapper">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__header">
              <colgroup></colgroup>
              <thead class="">
                <tr class=""></tr>
              </thead>
            </table>
          </div>
          <div class="el-table__body-wrapper is-scrolling-none">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__body">
              <colgroup></colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div class="el-table__empty-block"><span class="el-table__empty-text">暂无数据</span></div>
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div class="el-table__column-resize-proxy" style="display: none;"></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`layout specify height 2`] = `
<div class="listview" style="height: 500px; min-height: inherit;">
  <!---->
  <div class="listview__main">
    <div class="list-view__filterbar list-view__filterbar--fold">
      <form class="el-form el-form--inline">
        <!---->
        <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
          <div class="filterbar__submit-btn" style="transform: translateX(0px);">
            <div class="el-form-item el-form-item--small">
              <!---->
              <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
                  <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
                  <!---->
                  <!----><span>
            重置
          </span></button>
                <!---->
              </div>
            </div>
          </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
            <!----><i class="el-icon-caret-bottom"></i>
            <!----></button>
        </div>
        <!---->
      </form>
    </div>
    <div>
      <div class="listview__content">
        <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--small" style="width: 100%;">
          <div class="hidden-columns">
            <!---->
            <div></div>
          </div>
          <div class="el-table__header-wrapper">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 50px;">
              <colgroup></colgroup>
              <thead class="">
                <tr class=""></tr>
              </thead>
            </table>
          </div>
          <div class="el-table__body-wrapper is-scrolling-left">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 50px;">
              <colgroup></colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div class="el-table__empty-block" style="width: 50px;"><span class="el-table__empty-text">暂无数据</span></div>
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div class="el-table__column-resize-proxy" style="display: none;"></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
